Ensure columns (plural) block within pmk-stats has the correct flex wrap

--- a/assets/css/frontend/components/stats.css
+++ b/assets/css/frontend/components/stats.css
@@ -24,7 +24,7 @@ div.wp-block-group.pmk-stats {
 	}
 
 	& .wp-block-columns {
-		flex-wrap: wrap;
+		flex-wrap: wrap !important;
 
 		@media (--wp-medium-max) {
 			justify-content: center;
